WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101750
[css] Text Decoration's "blink" value not treated as valid when CSS3_TEXT feature flag is enabled
https://bugs.webkit.org/show_bug.cgi?id=101750
Summary
[css] Text Decoration's "blink" value not treated as valid when CSS3_TEXT fea...
Bruno Abinader (history only)
Reported
2012-11-09 05:54:44 PST
While investigating the issue with
bug 101529
, I've found out the new implementation for CSS 2.1's "text-decoration" property no longer accepts "blink" value as valid when CSS3_TEXT feature flag is enabled.
Attachments
Patch
(14.29 KB, patch)
2012-11-09 07:08 PST
,
Bruno Abinader (history only)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Bruno Abinader (history only)
Comment 1
2012-11-09 07:08:42 PST
Created
attachment 173301
[details]
Patch Proposed patch
Kenneth Rohde Christiansen
Comment 2
2012-11-09 08:08:28 PST
Comment on
attachment 173301
[details]
Patch LGTM
WebKit Review Bot
Comment 3
2012-11-09 09:23:09 PST
Comment on
attachment 173301
[details]
Patch Clearing flags on attachment: 173301 Committed
r134078
: <
http://trac.webkit.org/changeset/134078
>
WebKit Review Bot
Comment 4
2012-11-09 09:23:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug