[css] Text decoration's "blink" not valid when CSS3_TEXT is enabled https://bugs.webkit.org/show_bug.cgi?id=101750

Reviewed by Ojan Vafai.

Source/WebCore:

This patch fixes an issue regarding "blink" value, which is valid for CSS 2.1
"text-decoration" property, but recently have its parser function modified by
the addition of CSS3 "-webkit-text-decoration-line" property.

The 'fast/css/getComputedStyle/getComputedStyle-text-decoration.html'
layout test is updated with all possible value combinations.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseTextDecoration): Added 'blink' value to list
if accepted.

LayoutTests:

This patch updates the "text-decoration" computed style layout tests to
handle a larger variety of value combinations.

* fast/css/getComputedStyle/getComputedStyle-text-decoration-expected.txt:
* fast/css/getComputedStyle/script-tests/getComputedStyle-text-decoration.js:


Canonical link: https://commits.webkit.org/119861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134078 268f45cc-cd09-0410-ab3c-d52691b4dbfc